tests/errors/literals/literal-bool-param.fn
---
Description: Literal declared with a bool parameter
Expected: compile error
---

type BadLiteral
{
    init{}

    literal nope(value: bool) {}
}

type Program
{
    fn Main -> i32
    {
        return 0
    }
}
